# docs/api/openapi.local.json
@@ -581,6 +581,9 @@
                           "to": {},
                           "detail": {
                             "type": "string"
+                          },
+                          "advice": {
+                            "type": "boolean"
                           }
                         },
                         "required": [
@@ -869,6 +872,9 @@
                                 "to": {},
                                 "detail": {
                                   "type": "string"
+                                },
+                                "advice": {
+                                  "type": "boolean"
                                 }
                               },
                               "required": [
@@ -908,6 +914,9 @@
                                 },
                                 "why": {
                                   "type": "string"
+                                },
+                                "advice": {
+                                  "type": "boolean"
                                 }
                               },
                               "required": [
@@ -1252,6 +1261,9 @@
                       "to": {},
                       "detail": {
                         "type": "string"
+                      },
+                      "advice": {
+                        "type": "boolean"
                       }
                     },
                     "required": [
@@ -1485,6 +1497,9 @@
                 "to": {},
                 "detail": {
                   "type": "string"
+                },
+                "advice": {
+                  "type": "boolean"
                 }
               },
               "required": [
@@ -1749,6 +1764,9 @@
                         "to": {},
                         "detail": {
                           "type": "string"
+                        },
+                        "advice": {
+                          "type": "boolean"
                         }
                       },
                       "required": [
@@ -1804,6 +1822,9 @@
                 "to": {},
                 "detail": {
                   "type": "string"
+                },
+                "advice": {
+                  "type": "boolean"
                 }
               },
               "required": [
